# QUANTAXIS

./: .gitattributes  .gitignore  conf.py  main.py.bak  mypy.ini  pyproject.toml  replace.py  requirements.txt  setup_cython.py  不兼容3.12暂不安装的包.txt  未使用的安装包.txt  需要新安装的安装包.txt
Documents/: about_event.py
Documents/logo/: sy.py
QUANTAXIS/QAARP/: QAAccount.py  QAAccountPro.py  QAPortfolio.py  QARisk.py  QAUser.py  market_preset.py
QUANTAXIS/QAAnalysis/: QAAnalysis_account.py  QAAnalysis_block.py  QAAnalysis_dataframe.py  QAAnalysis_machinelearning.py  QAAnalysis_signal.py  QAAnalysis_tick.py  QAAnalysis_trade.py
QUANTAXIS/QAApplication/: OldBacktest.py  QABacktest.py  QAResult.py  QATradeRealtime.py  backtest_setting.py
QUANTAXIS/QACmd/: __init__.py  runner.py
QUANTAXIS/QAData/: QABlockStruct.py  QADataStruct.py  QAFinancialStruct.py  QAIndicatorStruct.py  QASeriesStruct.py  base_datastruct.py  data_fq.py  data_marketvalue.py  data_resample.py
QUANTAXIS/QAEngine/: QAAsyncSchedule.py  QAAsyncTask.py  QAAsyncThread.py  QAAsyncioEngine.py  QAEvent.py  QATask.py  QAThreadEngine.py
QUANTAXIS/QAExecutor/: QAExecutor.py
QUANTAXIS/QAFactor/: analyze.py  data.py  fetcher.py  localize.py  performance.py  plotting_utils.py  preprocess.py  process.py  tears.py  utils.py
QUANTAXIS/QAFetch/: Fetcher.py  QAQuery.py  QAQuery_Advance.py  QAQuery_Async.py  QATdx.py  QATdx_adv.py  QAThs.py  QAhuobi.py  QAhuobi_realtime.py  __init__.py
QUANTAXIS/QAIndicator/: __init__.py  base.py  hurst.py  talib_numpy.py
QUANTAXIS/QAMarket/: QAAtBroker.py  QABroker.py  QADealer.py  QAMarket.py  QAOrder.py  QAPosition.py  QAShipaneBroker.py  QATTSBroker.py  QATrade.py  common.py  shipaneclient.py
QUANTAXIS/QASU/: main.py  save_binance.py  save_bitfinex.py  save_bitmex.py  save_gm.py  save_huobi.py  save_jq.py  save_okex.py  save_tdx.py  save_tdx_parallelism.py  save_tushare.py  save_tusharepro_pg.py  trans_gm.py  trans_ss.py
QUANTAXIS/QASelector/: multilevel.py  selector.py
QUANTAXIS/QASetting/: cache.py
QUANTAXIS/QAStrategy/: qactabase.py  qamultibase.py
QUANTAXIS/QAUtil/: Parallelism.py  QADate.py  QADateTools.py  QADate_Adv.py  QADate_trade.py  QAParameter.py  QAPlot.py  QARandom.py  QASetting.py  QAText.py  QAWebutil.py  QAcrypto.py  __init__.py
QUANTAXIS/QAWebServer/: util.py
QUANTAXIS_Test/QAARP_Test/: QAAccount_Test.py  mytest_QAAccount.py
QUANTAXIS_Test/QABacktest_Test/: QABacktest_Bollinger_Bands.py
QUANTAXIS_Test/QAData_Test/: data_fq_test.py  test_QAIndicatorStruct.py
QUANTAXIS_Test/QAEngine_Test/: QAAsyncExec_test.py  QAAsyncThread_Test.py  QAEvent_Test.py
QUANTAXIS_Test/QAFetch_Test/: Fetcher_Test.py  QAQuery_Advance_Test.py  QAQuery_Option_Test.py  QAQuery_Test.py  QATdx_Test.py  QATdx_Test_multi_process_map.py
QUANTAXIS_Test/QAMarket_Test/: QA_Order_Test.py
QUANTAXIS_Test/QAUtil_Test/: PyQT_TableView.py  QADate_Test.py  QADate_trade_Test.py  QATest_None.py  QATester_nothing.py  QA_TestMultProcessPipe.py  QA_TestParentProcess.py  QA_TestSubProcess.py  ipc.py  parallelism_test.py  socket_echo_client.py  socket_echo_server.py  test_qa_setting.py
QUANTAXIS_Test/QAWeb_Test/: test_get.py
config/: update_data.py
docker/kite/qa-base_rust2/: Dockerfile  requirements.txt  source.list
docker/kite/qa-community-rust2/: Dockerfile
docker/kite/qa-jupyter_rust2/: Dockerfile
docker/kite/qa-web-rust2/: Dockerfile
docker/qa-jupyter-go-r/: jupyter_notebook_config.py
docker/qa-jupyter-r/: jupyter_notebook_config.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
