[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantaxis"
version = "2.0.0"
authors = [
    { name = "yutiansut", email = "yutiansut@qq.com" },
]
description = "QUANTAXIS:Quantitative Financial Strategy Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["quantaxis", "quant", "finance", "Backtest", "Framework"]
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "alphalens>=0.4.0",
    "apscheduler>=3.11.0",
    "async-timeout>=5.0.1",
    "clickhouse-driver>=0.2.9",
    "gm>=3.0.114",
    "janus>=2.0.0",
    "jieba>=0.42.1",
    "jqdatasdk>=1.9.7",
    "matplotlib>=3.10.1",
    "motor>=3.7.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "peakutils>=1.3.5",
    "pika>=1.3.2",
    "pyarrow>=19.0.1",
    "pyconvert>=0.6.3",
    "pyecharts>=2.0.8",
    "pyfolio>=0.9.2",
    "pymongo>=4.11.3",
    "pytdx>=1.72",
    "qaenv>=0.0.4",
    "retrying>=1.3.4",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "ta-lib",
    "toml>=0.10.2",
    "tornado>=6.4.2",
    "tushare>=1.4.21",
    "zenlog>=1.1",
]

[project.urls]
Homepage = "https://github.com/quantaxis/quantaxis"

[project.entry-points.console_scripts]
quantaxis = "QUANTAXIS.QACmd:QA_cmd"
quantaxisq = "QUANTAXIS.QAFetch.QATdx_adv:bat"
qarun = "QUANTAXIS.QACmd.runner:run"
qawebserver = "QUANTAXIS.QAWebServer.server:main"

[tool.setuptools]
packages = [
    "QUANTAXIS",
    "QUANTAXIS.QAFetch",
    "QUANTAXIS.QACmd",
    "QUANTAXIS.QASetting",
    "QUANTAXIS.QAFactor",
    "QUANTAXIS.QAEngine",
    "QUANTAXIS.QAData",
    "QUANTAXIS.QAAnalysis",
    "QUANTAXIS.QAPubSub",
    "QUANTAXIS.QASU",
    "QUANTAXIS.QAUtil",
    "QUANTAXIS.QAIndicator",
    "QUANTAXIS.QAStrategy",
    "QUANTAXIS.QAMarket",
    "QUANTAXIS.QIFI",
    "QUANTAXIS.QAWebServer"
]
include-package-data = true

[tool.ruff]
# Ruff 的基础配置

# 设置目标 Python 版本为 3.12
target-version = "py312"

[tool.ruff.lint]
# 忽略特定的错误或警告代码。
# 在升级过程中，你可能需要暂时忽略一些旧代码中存在的问题，逐步修复
ignore = [
    "F401",
    "F811",
    "E722",
    "F821",
    "F841",
    "E731",
    "F405",
    "F403",
    "E741",
    "E402"
]

[tool.uv.sources]
ta-lib = { path = "wheels/ta_lib-0.6.3-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "deptry>=0.23.0",
    "pytest>=8.3.5",
    "pyupgrade>=3.19.1",
    "ruff>=0.11.2",
    "setuptools>=78.1.0",
    "vulture>=2.14",
    "wheel>=0.45.1",
]
