[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantaxis"
description = "QUANTAXIS:Quantitative Financial Strategy Framework"
version = "1.10.19"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "yutiansut" },
    { email = "yutiansut@qq.com" }
]
maintainers = [
    { name = "luoyang1974" },
    { email = "luoyang1974@gmail.com" }
]
license = { file = "LICENSE" }

keywords = ["quantaxis", "quant", "finance", "Backtest", "Framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymongo",
    "bs4",
    "pandas",
    "lxml",
    "matplotlib",
    "requests",
    "numpy",
    "pytesseract",
    "gevent-websocket",
    "apscheduler",
    "tornado",
    "zenlog",
    "protobuf",
    "motor",
    "retrying",
    "seaborn",
    "attrs",
    "pyconvert",
    "janus",
    "async_timeout",
    "IPython",
    "numba",
    "websocket-client",
    "tushare",
    "statsmodels",
    "scipy",
    "pytdx",
    "delegator.py",
    "flask",
    "pyecharts",
    "six",
    "ta-lib",
    "jieba>=0.42.1",
    "jqdatasdk>=1.9.7",
]

[project.urls]
Homepage = "https://github.com/quantaxis/quantaxis"

[project.entry-points.console_scripts]
quantaxis = "QUANTAXIS.QACmd:QA_cmd"
quantaxisq = "QUANTAXIS.QAFetch.QATdx_adv:bat"
qarun = "QUANTAXIS.QACmd.runner:run"

[tool.setuptools]
packages = [
    "QUANTAXIS",
    "QUANTAXIS.QAFetch",
    "QUANTAXIS.QACmd",
    "QUANTAXIS.QAMarket",
    "QUANTAXIS.QASetting",
    "QUANTAXIS.QAFactor",
    "QUANTAXIS.QAApplication",
    "QUANTAXIS.QAEngine",
    "QUANTAXIS.QAData",
    "QUANTAXIS.QAData.proto",
    "QUANTAXIS.QAAnalysis",
    "QUANTAXIS.QASelector",
    "QUANTAXIS.QASU",
    "QUANTAXIS.QAUtil",
    "QUANTAXIS.QAARP",
    "QUANTAXIS.QAIndicator"
]
include-package-data = true
zip-safe = true

[tool.ruff]
# Ruff 的基础配置
line-length = 120

# 设置目标 Python 版本为 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "UP",  # pyupgrade
]
ignore = [
    "F401",
    "F811",
    "E722",
    "F821",
    "F841",
    "E731",
    "F405",
    "F403",
    "E741",
    "E501"
]

[tool.uv.sources]
ta-lib = { path = "wheels/ta_lib-0.6.3-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
    "scipy-stubs>=1.15.2.2",
    "twine>=6.1.0",
    "types-jieba>=0.0.7",
    "types-lxml>=2025.3.30",
    "types-psycopg2>=2.9.21.20250318",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20250328",
    "types-seaborn>=0.13.2.20250111",
    "types-six>=1.17.0.20250403",
]
